# egress-filter

./: Cargo.toml  LICENSE  README.md  egress-allowlist.yaml
src/: config_watcher.rs  lib.rs
src/allowlist/: config.rs  matcher.rs  mod.rs
src/ca/: generator.rs  mod.rs
src/network/: dns.rs  handlers.rs  mod.rs  sockaddr.rs
src/proxy/: dns.rs  doh.rs  mod.rs  server.rs  tls.rs  tunnel.rs
src/seccomp/: filter.rs  memory.rs  mod.rs  notify.rs
